cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05381_MsrSagStack.template.json
{
   "Metadata":{
      "AWS::CloudFormation::Interface":{
         "ParameterGroups":[
            {
               "Label":{
                  "default":"MSR Configuration"
               },
               "Parameters":[
                  "EmpowerUserName",
                  "EmpowerPassword",
                  "DefaultPort",
                  "InstallDirectory"
               ]
            },
            {
               "Label":{
                  "default":"AWS Configuration"
               },
               "Parameters":[
                  "S3BucketName",
                  "KeyPair",
                  "MyIP"
               ]
            }
         ]
      }
   },
   "Parameters":{
      "S3BucketName":{
         "Type":"String",
         "Default":"",
         "Description":"Enter s3 bucket name"
      },
      "KeyPair":{
         "Type":"String",
         "Default":"",
         "Description":"Enter the name of the keypair"
      },
      "EmpowerUserName":{
         "Type":"String",
         "Default":"",
         "Description":"Enter Empower username"
      },
      "EmpowerPassword":{
         "Type":"String",
         "Default":"",
         "Description":"Enter Empower passsword",
         "NoEcho":true
      },
      "MyIP":{
         "Type":"String",
         "Default":"",
         "Description":"Enter your system IP"
      },
      "DefaultPort":{
         "Type":"Number",
         "Default":"5555",
         "Description":"Enter Default Port Number"
      },
      "InstallDirectory":{
         "Type":"String",
         "Default":"/opt/softwareag/msr",
         "Description":"Enter MSR install directory"
      },
      "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter":{
         "Type":"AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
         "Default":"/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2"
      }
   },
   "Resources":{
      "S3Access85299E0B":{
         "Type":"AWS::IAM::Role",
         "Properties":{
            "AssumeRolePolicyDocument":{
               "Statement":[
                  {
                     "Action":"sts:AssumeRole",
                     "Effect":"Allow",
                     "Principal":{
                        "Service":"ec2.amazonaws.com"
                     }
                  }
               ],
               "Version":"2012-10-17"
            },
            "ManagedPolicyArns":[
               {
                  "Fn::Join":[
                     "",
                     [
                        "arn:",
                        {
                           "Ref":"AWS::Partition"
                        },
                        ":iam::aws:policy/AmazonS3ReadOnlyAccess"
                     ]
                  ]
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/S3Access/Resource"
         }
      },
      "vpcMsrSag8B9FEBF8":{
         "Type":"AWS::EC2::VPC",
         "Properties":{
            "CidrBlock":"10.0.0.0/16",
            "EnableDnsHostnames":true,
            "EnableDnsSupport":true,
            "InstanceTenancy":"default",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/Resource"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet1SubnetCF4901C9":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "CidrBlock":"10.0.0.0/24",
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "AvailabilityZone":"us-east-1a",
            "MapPublicIpOnLaunch":true,
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1"
               },
               {
                  "Key":"aws-cdk:subnet-name",
                  "Value":"publicMsrSag"
               },
               {
                  "Key":"aws-cdk:subnet-type",
                  "Value":"Public"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1/Subnet"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet1RouteTableB1CC59B7":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1/RouteTable"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet1RouteTableAssociationB7CD77E2":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "RouteTableId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet1RouteTableB1CC59B7"
            },
            "SubnetId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet1SubnetCF4901C9"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1/RouteTableAssociation"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet1DefaultRouteC98ED782":{
         "Type":"AWS::EC2::Route",
         "Properties":{
            "RouteTableId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet1RouteTableB1CC59B7"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{
               "Ref":"vpcMsrSagIGW13543146"
            }
         },
         "DependsOn":[
            "vpcMsrSagVPCGW7E3D0847"
         ],
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1/DefaultRoute"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet1EIPAB98B03A":{
         "Type":"AWS::EC2::EIP",
         "Properties":{
            "Domain":"vpc",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1/EIP"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet1NATGateway05535577":{
         "Type":"AWS::EC2::NatGateway",
         "Properties":{
            "AllocationId":{
               "Fn::GetAtt":[
                  "vpcMsrSagpublicMsrSagSubnet1EIPAB98B03A",
                  "AllocationId"
               ]
            },
            "SubnetId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet1SubnetCF4901C9"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet1/NATGateway"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet2SubnetDBA01AB1":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "CidrBlock":"10.0.1.0/24",
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "AvailabilityZone":"us-east-1b",
            "MapPublicIpOnLaunch":true,
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet2"
               },
               {
                  "Key":"aws-cdk:subnet-name",
                  "Value":"publicMsrSag"
               },
               {
                  "Key":"aws-cdk:subnet-type",
                  "Value":"Public"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet2/Subnet"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet2RouteTable33FEC15B":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet2"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet2/RouteTable"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet2RouteTableAssociationBAE9123A":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "RouteTableId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet2RouteTable33FEC15B"
            },
            "SubnetId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet2SubnetDBA01AB1"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet2/RouteTableAssociation"
         }
      },
      "vpcMsrSagpublicMsrSagSubnet2DefaultRouteE06A3EBE":{
         "Type":"AWS::EC2::Route",
         "Properties":{
            "RouteTableId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet2RouteTable33FEC15B"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{
               "Ref":"vpcMsrSagIGW13543146"
            }
         },
         "DependsOn":[
            "vpcMsrSagVPCGW7E3D0847"
         ],
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/publicMsrSagSubnet2/DefaultRoute"
         }
      },
      "vpcMsrSagprivateMsrSagSubnet1SubnetE389F5B1":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "CidrBlock":"10.0.2.0/24",
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "AvailabilityZone":"us-east-1a",
            "MapPublicIpOnLaunch":false,
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet1"
               },
               {
                  "Key":"aws-cdk:subnet-name",
                  "Value":"privateMsrSag"
               },
               {
                  "Key":"aws-cdk:subnet-type",
                  "Value":"Private"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet1/Subnet"
         }
      },
      "vpcMsrSagprivateMsrSagSubnet1RouteTable151FADAC":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet1"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet1/RouteTable"
         }
      },
      "vpcMsrSagprivateMsrSagSubnet1RouteTableAssociationA6EAC90C":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "RouteTableId":{
               "Ref":"vpcMsrSagprivateMsrSagSubnet1RouteTable151FADAC"
            },
            "SubnetId":{
               "Ref":"vpcMsrSagprivateMsrSagSubnet1SubnetE389F5B1"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet1/RouteTableAssociation"
         }
      },
      "vpcMsrSagprivateMsrSagSubnet1DefaultRoute30487DCF":{
         "Type":"AWS::EC2::Route",
         "Properties":{
            "RouteTableId":{
               "Ref":"vpcMsrSagprivateMsrSagSubnet1RouteTable151FADAC"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "NatGatewayId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet1NATGateway05535577"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet1/DefaultRoute"
         }
      },
      "vpcMsrSagprivateMsrSagSubnet2Subnet2C0B8F36":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "CidrBlock":"10.0.3.0/24",
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "AvailabilityZone":"us-east-1b",
            "MapPublicIpOnLaunch":false,
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet2"
               },
               {
                  "Key":"aws-cdk:subnet-name",
                  "Value":"privateMsrSag"
               },
               {
                  "Key":"aws-cdk:subnet-type",
                  "Value":"Private"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet2/Subnet"
         }
      },
      "vpcMsrSagprivateMsrSagSubnet2RouteTable848DBD6B":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet2"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet2/RouteTable"
         }
      },
      "vpcMsrSagprivateMsrSagSubnet2RouteTableAssociation50F0C22F":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "RouteTableId":{
               "Ref":"vpcMsrSagprivateMsrSagSubnet2RouteTable848DBD6B"
            },
            "SubnetId":{
               "Ref":"vpcMsrSagprivateMsrSagSubnet2Subnet2C0B8F36"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet2/RouteTableAssociation"
         }
      },
      "vpcMsrSagprivateMsrSagSubnet2DefaultRoute1E1A1C4E":{
         "Type":"AWS::EC2::Route",
         "Properties":{
            "RouteTableId":{
               "Ref":"vpcMsrSagprivateMsrSagSubnet2RouteTable848DBD6B"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "NatGatewayId":{
               "Ref":"vpcMsrSagpublicMsrSagSubnet1NATGateway05535577"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/privateMsrSagSubnet2/DefaultRoute"
         }
      },
      "vpcMsrSagIGW13543146":{
         "Type":"AWS::EC2::InternetGateway",
         "Properties":{
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/vpcMsrSag"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/IGW"
         }
      },
      "vpcMsrSagVPCGW7E3D0847":{
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            },
            "InternetGatewayId":{
               "Ref":"vpcMsrSagIGW13543146"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/vpcMsrSag/VPCGW"
         }
      },
      "sgMsrSagPubicA435587A":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"MsrSagStack/sgMsrSagPubic",
            "SecurityGroupEgress":[
               {
                  "CidrIp":"0.0.0.0/0",
                  "Description":"Allow all outbound traffic by default",
                  "IpProtocol":"-1"
               }
            ],
            "SecurityGroupIngress":[
               {
                 "CidrIp": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "MyIP"
                  },
                  "/32"
                ]
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Ref": "MyIP"
                  },
                  "/32:22"
                ]
              ]
            },
            "FromPort": 22,
            "IpProtocol": "tcp",
            "ToPort": 22
               }
            ],
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/sgMsrSagPubic/Resource"
         }
      },
      "sgMsrSagPrivate831BC812":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"MsrSagStack/sgMsrSagPrivate",
            "SecurityGroupEgress":[
               {
                  "CidrIp":"0.0.0.0/0",
                  "Description":"Allow all outbound traffic by default",
                  "IpProtocol":"-1"
               }
            ],
            "SecurityGroupIngress":[
               {
                  "CidrIp":"0.0.0.0/0",
                  "Description":"from 0.0.0.0/0:80",
                  "FromPort":80,
                  "IpProtocol":"tcp",
                  "ToPort":80
               }
            ],
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            }
         },
         "DependsOn":[
            "sgMsrSagPubicA435587A"
         ],
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/sgMsrSagPrivate/Resource"
         }
      },
      "sgMsrSagPrivatefrom00000IndirectPortB1D23C8D":{
         "Type":"AWS::EC2::SecurityGroupIngress",
         "Properties":{
            "IpProtocol":"tcp",
            "CidrIp":"0.0.0.0/0",
            "Description":"from 0.0.0.0/0:{IndirectPort}",
            "FromPort":{
               "Ref":"DefaultPort"
            },
            "GroupId":{
               "Fn::GetAtt":[
                  "sgMsrSagPrivate831BC812",
                  "GroupId"
               ]
            },
            "ToPort":{
               "Ref":"DefaultPort"
            }
         },
         "DependsOn":[
            "sgMsrSagPubicA435587A"
         ],
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/sgMsrSagPrivate/from 0.0.0.0_0:{IndirectPort}"
         }
      },
      "sgMsrSagPrivatefromMsrSagStacksgMsrSagPubic18B8518CALLTRAFFICD629DD2D":{
         "Type":"AWS::EC2::SecurityGroupIngress",
         "Properties":{
            "IpProtocol":"-1",
            "Description":"from MsrSagStacksgMsrSagPubic18B8518C:ALL TRAFFIC",
            "GroupId":{
               "Fn::GetAtt":[
                  "sgMsrSagPrivate831BC812",
                  "GroupId"
               ]
            },
            "SourceSecurityGroupId":{
               "Fn::GetAtt":[
                  "sgMsrSagPubicA435587A",
                  "GroupId"
               ]
            }
         },
         "DependsOn":[
            "sgMsrSagPubicA435587A"
         ],
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/sgMsrSagPrivate/from MsrSagStacksgMsrSagPubic18B8518C:ALL TRAFFIC"
         }
      },
      "asgMsrSagPublicInstanceSecurityGroupD661BA57":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"MsrSagStack/asgMsrSagPublic/InstanceSecurityGroup",
            "SecurityGroupEgress":[
               {
                  "CidrIp":"0.0.0.0/0",
                  "Description":"Allow all outbound traffic by default",
                  "IpProtocol":"-1"
               }
            ],
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/asgMsrSagPublic"
               }
            ],
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPublic/InstanceSecurityGroup/Resource"
         }
      },
      "asgMsrSagPublicInstanceRoleA59C1264":{
         "Type":"AWS::IAM::Role",
         "Properties":{
            "AssumeRolePolicyDocument":{
               "Statement":[
                  {
                     "Action":"sts:AssumeRole",
                     "Effect":"Allow",
                     "Principal":{
                        "Service":"ec2.amazonaws.com"
                     }
                  }
               ],
               "Version":"2012-10-17"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/asgMsrSagPublic"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPublic/InstanceRole/Resource"
         }
      },
      "asgMsrSagPublicInstanceProfileCC38303E":{
         "Type":"AWS::IAM::InstanceProfile",
         "Properties":{
            "Roles":[
               {
                  "Ref":"asgMsrSagPublicInstanceRoleA59C1264"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPublic/InstanceProfile"
         }
      },
      "asgMsrSagPublicLaunchConfig8A8BAE29":{
         "Type":"AWS::AutoScaling::LaunchConfiguration",
         "Properties":{
            "ImageId":{
               "Ref":"SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "InstanceType":"t2.micro",
            "IamInstanceProfile":{
               "Ref":"asgMsrSagPublicInstanceProfileCC38303E"
            },
            "KeyName":{
               "Ref":"KeyPair"
            },
            "SecurityGroups":[
               {
                  "Fn::GetAtt":[
                     "asgMsrSagPublicInstanceSecurityGroupD661BA57",
                     "GroupId"
                  ]
               },
               {
                  "Fn::GetAtt":[
                     "sgMsrSagPubicA435587A",
                     "GroupId"
                  ]
               }
            ],
            "UserData":{
               "Fn::Base64":"#!/bin/bash"
            }
         },
         "DependsOn":[
            "asgMsrSagPublicInstanceRoleA59C1264"
         ],
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPublic/LaunchConfig"
         }
      },
      "asgMsrSagPublicASG65019915":{
         "Type":"AWS::AutoScaling::AutoScalingGroup",
         "Properties":{
            "MaxSize":"2",
            "MinSize":"1",
            "LaunchConfigurationName":{
               "Ref":"asgMsrSagPublicLaunchConfig8A8BAE29"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "PropagateAtLaunch":true,
                  "Value":"MsrSagStack/asgMsrSagPublic"
               }
            ],
            "VPCZoneIdentifier":[
               {
                  "Ref":"vpcMsrSagpublicMsrSagSubnet1SubnetCF4901C9"
               },
               {
                  "Ref":"vpcMsrSagpublicMsrSagSubnet2SubnetDBA01AB1"
               }
            ]
         },
         "UpdatePolicy":{
            "AutoScalingScheduledAction":{
               "IgnoreUnmodifiedGroupSizeProperties":true
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPublic/ASG"
         }
      },
      "asgMsrSagPrivateInstanceSecurityGroup3DE35560":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"MsrSagStack/asgMsrSagPrivate/InstanceSecurityGroup",
            "SecurityGroupEgress":[
               {
                  "CidrIp":"0.0.0.0/0",
                  "Description":"Allow all outbound traffic by default",
                  "IpProtocol":"-1"
               }
            ],
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"MsrSagStack/asgMsrSagPrivate"
               }
            ],
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPrivate/InstanceSecurityGroup/Resource"
         }
      },
      "asgMsrSagPrivateInstanceProfileC33DE7D3":{
         "Type":"AWS::IAM::InstanceProfile",
         "Properties":{
            "Roles":[
               {
                  "Ref":"S3Access85299E0B"
               }
            ]
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPrivate/InstanceProfile"
         }
      },
      "asgMsrSagPrivateLaunchConfig27A35EF6":{
         "Type":"AWS::AutoScaling::LaunchConfiguration",
         "Properties":{
            "ImageId":{
               "Ref":"SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "InstanceType":"t2.micro",
            "IamInstanceProfile":{
               "Ref":"asgMsrSagPrivateInstanceProfileC33DE7D3"
            },
            "KeyName":{
               "Ref":"KeyPair"
            },
            "SecurityGroups":[
               {
                  "Fn::GetAtt":[
                     "asgMsrSagPrivateInstanceSecurityGroup3DE35560",
                     "GroupId"
                  ]
               },
               {
                  "Fn::GetAtt":[
                     "sgMsrSagPrivate831BC812",
                     "GroupId"
                  ]
               }
            ],
            "UserData":{
               "Fn::Base64":{
                  "Fn::Join":[
                     "",
                     [
                        "#!/bin/bash\n",
                        "sudo yum -y update && sudo yum -y upgrade\n",
                        "sudo mkdir -p /opt/softwareag/resource\n",
                        "sudo mkdir -p ",
                        {
                           "Ref":"InstallDirectory"
                        },
                        "\n",
                        "sudo chmod 777 ",
                        {
                           "Ref":"InstallDirectory"
                        },
                        " -R\n",
                        "sudo aws s3 cp s3://",
                        {
                           "Ref":"S3BucketName"
                        },
                        "/installer.bin /opt/softwareag/resource\n",
                        "sudo aws s3 cp s3://",
                        {
                           "Ref":"S3BucketName"
                        },
                        "/msrInstallerLinuxScript_10_5.txt /opt/softwareag/resource\n",
                        "sudo aws s3 cp s3://",
                        {
                           "Ref":"S3BucketName"
                        },
                        "/licenseKey.xml /opt/softwareag/resource\n",
                        "sudo sed -i \"s#^ServerURL=.*#ServerURL=\\https:\/\/sdc.softwareag.com\/cgi-bin\/dataservewebM105.cgi#g; s#^InstallDir=.*#InstallDir=\\",
                        {
                           "Ref":"InstallDirectory"
                        },
                        "#g;  s#^integrationServer.LicenseFile.text=__VERSION1__,.*#integrationServer.LicenseFile.text=__VERSION1__,\/opt/softwareag/resource/licenseKey.xml#g; s#^IntegrationServerPort=__VERSION1__.*#IntegrationServerPort=__VERSION1__,",
                        {
                           "Ref":"DefaultPort"
                        },
                        "#g; s#^IntegrationServerdiagnosticPort=__VERSION1__.*#IntegrationServerdiagnosticPort=__VERSION1__,9999#g; s#^Username=.*#Username=",
                        {
                           "Ref":"EmpowerUserName"
                        },
                        "#g; s#^Password=.*#Password=",
                        {
                           "Ref":"EmpowerPassword"
                        },
                        "#g\" \/opt\/softwareag\/resource\/msrInstallerLinuxScript_10_5.txt\n",
                        "sudo chmod a+x /opt/softwareag/resource/installer.bin\n",
                        "sudo /opt/softwareag/resource/installer.bin -readScript /opt/softwareag/resource/msrInstallerLinuxScript_10_5.txt -console -scriptErrorInteract no\n",
                        "sudo ",
                        {
                           "Ref":"InstallDirectory"
                        },
                        "/IntegrationServer/bin/startup.sh"
                     ]
                  ]
               }
            }
         },
         "DependsOn":[
            "S3Access85299E0B"
         ],
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPrivate/LaunchConfig"
         }
      },
      "asgMsrSagPrivateASGFC9A16C9":{
         "Type":"AWS::AutoScaling::AutoScalingGroup",
         "Properties":{
            "MaxSize":"2",
            "MinSize":"1",
            "LaunchConfigurationName":{
               "Ref":"asgMsrSagPrivateLaunchConfig27A35EF6"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "PropagateAtLaunch":true,
                  "Value":"MsrSagStack/asgMsrSagPrivate"
               }
            ],
            "TargetGroupARNs":[
               {
                  "Ref":"ntgMsrSagAC114A2F"
               }
            ],
            "VPCZoneIdentifier":[
               {
                  "Ref":"vpcMsrSagprivateMsrSagSubnet1SubnetE389F5B1"
               },
               {
                  "Ref":"vpcMsrSagprivateMsrSagSubnet2Subnet2C0B8F36"
               }
            ]
         },
         "UpdatePolicy":{
            "AutoScalingScheduledAction":{
               "IgnoreUnmodifiedGroupSizeProperties":true
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/asgMsrSagPrivate/ASG"
         }
      },
      "nlbMsrSag319869D8":{
         "Type":"AWS::ElasticLoadBalancingV2::LoadBalancer",
         "Properties":{
            "Scheme":"internet-facing",
            "Subnets":[
               {
                  "Ref":"vpcMsrSagpublicMsrSagSubnet1SubnetCF4901C9"
               },
               {
                  "Ref":"vpcMsrSagpublicMsrSagSubnet2SubnetDBA01AB1"
               }
            ],
            "Type":"network"
         },
         "DependsOn":[
            "vpcMsrSagpublicMsrSagSubnet1DefaultRouteC98ED782",
            "vpcMsrSagpublicMsrSagSubnet2DefaultRouteE06A3EBE"
         ],
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/nlbMsrSag/Resource"
         }
      },
      "nlbMsrSaglbListenerMsrSag20989AA5":{
         "Type":"AWS::ElasticLoadBalancingV2::Listener",
         "Properties":{
            "DefaultActions":[
               {
                  "TargetGroupArn":{
                     "Ref":"ntgMsrSagAC114A2F"
                  },
                  "Type":"forward"
               }
            ],
            "LoadBalancerArn":{
               "Ref":"nlbMsrSag319869D8"
            },
            "Port":80,
            "Protocol":"TCP"
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/nlbMsrSag/lbListenerMsrSag/Resource"
         }
      },
      "ntgMsrSagAC114A2F":{
         "Type":"AWS::ElasticLoadBalancingV2::TargetGroup",
         "Properties":{
            "Port":{
               "Ref":"DefaultPort"
            },
            "Protocol":"TCP",
            "VpcId":{
               "Ref":"vpcMsrSag8B9FEBF8"
            }
         },
         "Metadata":{
            "aws:cdk:path":"MsrSagStack/ntgMsrSag/Resource"
         }
      }
   },
   "Outputs":{
      "msrSagOut":{
         "Value":{
            "Fn::GetAtt":[
               "nlbMsrSag319869D8",
               "DNSName"
            ]
         },
         "Export":{
            "Name":"MSR-Server-Endpoint"
         }
      }
   }
}
